Fix dark mode display bugs on about and work pages

--- a/public/css/about-night.css
+++ b/public/css/about-night.css
@@ -690,7 +690,7 @@ html {
     font-family: "Roboto Condensed", sans-serif;
     font-size: 0.7em;
     font-weight: 800;
-    color: #2f2f2f;
+    color: #707993;
     position: absolute;
     margin-top: 0;
     margin-bottom: 0;
@@ -702,13 +702,13 @@ html {
   
   @keyframes pulseInstruction {
     0% {
-      color: #fdfdfd;
+      color: #3d465c;
     }
     50% {
-      color: #2f2f2f;
+      color: #3d465c;
     }
     100% {
-      color: #fdfdfd;
+      color: #3d465c;
     }
   }
   
@@ -761,13 +761,16 @@ html {
   
   @keyframes pulseSVG {
     0% {
-      fill: #fdfdfd;
+      background: #707993;
+      fill: #707993;
     }
     50% {
-      fill: #ccc;
+      background: #3d465c;
+      fill: #3d465c;
     }
     100% {
-      fill: #fdfdfd;
+      background: #707993;
+      fill: #707993;
     }
   }
   
@@ -792,13 +795,13 @@ html {
   
   @keyframes pulseFillGap {
     0% {
-      background: #fdfdfd;
+      background: #707993;
     }
     50% {
-      background: #ccc;
+      background: #3d465c;
     }
     100% {
-      background: #fdfdfd;
+      background: #707993;
     }
   }
   
@@ -840,7 +843,7 @@ html {
   .rippedPaperEdgePath {
     preserveaspectratio: none;
     position: relative;
-    fill: #fdfdfd;
+    fill: #3d465c;
     margin-top: -4px;
     margin-bottom: 0px;
     width: 100%;
@@ -849,10 +852,11 @@ html {
     transition: all 0.25s ease;
     cursor: pointer;
     z-index: 3;
+    opacity: 0;
   }
   
   .pageBreak:hover .rippedPaperEdgePath {
-    stroke:rgba(0, 0, 0, 0.84);
+    stroke: #10161d;
     stroke-width: 2;
     fill: #3d465c;
     stroke-dasharray: 870;
@@ -863,9 +867,11 @@ html {
   
   @keyframes dash {
     from {
+      opacity: 1;
       stroke-dashoffset: 870;
     }
     to {
+      opacity: 1;
       stroke-dashoffset: 0;
     }
   }
@@ -1159,6 +1165,14 @@ html {
     margin-right: 1em;
     width: 100%;
     height: 100%;
+  }
+
+  #twitterIconForeground {
+    fill: #3d465c; 
+  }
+
+  #freecodecampIconForeground {
+    fill: #3d465c; 
   }
   
   .codewarsIcon {
